feat: Add delete access method route
