# drs_filer/ga4gh/drs/server.py
@@ -9,6 +9,7 @@ from drs_filer.errors.exceptions import (
     InternalServerError,
     ObjectNotFound,
     URLNotFound,
+    BadRequest,
 )
 from drs_filer.ga4gh.drs.endpoints.register_new_objects import (
     register_new_objects,
@@ -96,3 +97,51 @@ def DeleteObject(object_id):
     else:
         db_collection.delete_one({"id": object_id})
         return object_id
+
+
+@log_traffic
+def DeleteAccessMethod(object_id: str, access_id: str) -> str:
+    """Delete DRS object's Access Method.
+
+    Args:
+        object_id: Identifier of DRS object to be deleted.
+        access_id: Identifier of the access method to be deleted
+
+    Returns:
+        `access_id` of deleted object. Note that a
+        `BadRequest/400` error response is returned if attempting to delete
+        the only remaining access method.
+    """
+
+    db_collection = (
+        current_app.config['FOCA'].db.dbs['drsStore'].
+        collections['objects'].client
+    )
+    obj = db_collection.find_one({"id": object_id})
+
+    if not obj:
+        raise ObjectNotFound
+    try:
+        access_methods = obj["access_methods"]
+    except KeyError:
+        raise InternalServerError
+
+    if access_id in [a.get('access_id', None) for a in access_methods]:
+        if len(access_methods) == 1:
+            raise BadRequest
+    else:
+        raise URLNotFound
+
+    del_access_methods = db_collection.update_one(
+        filter={'id': object_id},
+        update={
+            '$pull': {
+                'access_methods': {'access_id': access_id},
+            },
+        },
+    )
+
+    if del_access_methods.modified_count:
+        return access_id
+    else:
+        raise InternalServerError
